fixed video not fitting screen as it should

--- a/website/css/master.css
+++ b/website/css/master.css
@@ -113,9 +113,6 @@ section {
 }
 
 #one video {
-  width: auto;
-  height: auto;
-  min-width: 100%;
 }
 
 
@@ -174,7 +171,26 @@ section {
 #arrow {
   height: 81px;
   position: absolute;
-  bottom: 12%;
+  bottom: 0px;
   right: 50%;
   margin-right: -50.5px;
+  margin-bottom: 50.5px;
+}
+
+.fullscreen-bg {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    overflow: hidden;
+    z-index: -100;
+}
+
+.fullscreen-bg__video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-width: 100%;
+    min-height: 100%;
 }
